Se termina el modulo, se ve las directivas de control como *ngIf y *ngOf

--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -3,13 +3,13 @@
         <h1>*ngIf</h1>
         <hr>
 
-        <div class="card text-white bg-dark mb-3" style="width: 100%;">
+        <div *ngIf="mostrar" class="card text-white bg-dark mb-3" style="width: 100%;">
             <div class="card-body">
                 <h5 class="card-title">{{ frase.autor }}</h5>
                 <p class="card-text">{{ frase.mensaje }}</p>
             </div>
         </div>
-        <button class="btn btn-outline-dark" style="width: 100%;">
+        <button (click)="mostrar = !mostrar" class="btn btn-outline-dark" style="width: 100%;">
           Mostrar/Ocultar
         </button>
     </div>
@@ -19,11 +19,7 @@
         <hr>
 
         <ul class="list-group">
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-            <li class="list-group-item">Vestibulum at eros</li>
+            <li *ngFor="let personaje of personajes; let i = index" class="list-group-item">{{ i + 1 }} - {{ personaje }}</li>
         </ul>
     </div>
 </div>
